# Box

./: README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: history.md  index.md  license.md  thoughts.md
docs/docs/overview/: limitations.md
docs/docs/user-guide/: BoxList.md  ConfigBox.md  SBox.md  box_dots.md  box_intact_types.md  box_recast_values.md  boxes.md  camel_killer_box.md  conversion_box.md  default_box.md  frozen_box.md  limitations.md  overview.md
