[tool.poetry]
name = "box"
version = "0.1.0"
description = ""
authors = ["Evan Baird <mrcartoonster@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
ipython = "^7.15.0"
prettyprinter = "^0.18.0"
mkdocs-awesome-pages-plugin = "^2.2.1"
markdown = "^3.2.2"
pygments = "^2.6.1"
pymdown-extensions = "^7.1"
mkdocs-gitbook = "^0.0.1"
mkdocs-material = "^5.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
